syntax = "proto3";

package flatcosi;

import "google/protobuf/any.proto";

message SignatureRequest {
    google.protobuf.Any message = 1;
}

message SignatureResponse {
    google.protobuf.Any signature = 1;
}
